<resources>
    <string name="app_name">SonajerApp</string>
    <string name="author">Luis Carlos Medina Moreno</string>
    <string name="login">Regístrate</string>
    <string name="start">Comienza</string>
    <string name="intro">Ingresar</string>
    <string name="googleLogin">Ingresa con Google</string>
    <string name="ask">No tienes cuenta? </string>
    <string name="help">Recupera Tu Contraseña</string>
    <string name="info">Inicia una nueva aventura con SonajerApp y descubre una nueva forma de ver el mundo</string>
    <string name="infoLogin">La aventura está por iniciar, por favor inicia session</string>
    <string name="infoRegistro">Una aventura merece ser registrada, por favor diligencia los campos</string>
    <string name="askRegistro">Ya tienes cuenta? </string>
    <string name="conditions">Por favor acepta los Terminos y Condiciones</string>
    <string name="infoRecupera">Para recuperar su contraseña ingresa tu correo electrónico</string>
    <string name="sendMail">Enviar correo</string>
    <string name="editar">Editar</string>
    <string name="bienvenido">Bienvenido</string>
    <string name="inicio" >Inicio</string>
    <string name="productos"> Productos</string>
    <string name="categorias"> Categorías</string>
    <string name="carrito"> Carrito</string>
    <string name="perfil">Perfil</string>
    <string name="open_drawer">Abrir</string>
    <string name="close_drawer">Cerrar</string>
    <string name="mensaje_inicio_fragment">Es tu portal para adquirir colecciones de tus artistas favoritos</string>
    <string name="nombres">Nombres</string>
    <string name="apellidos">Apellidos</string>
    <string name="correo_electr_nico">Correo Electrónico</string>
    <string name="tel">Teléfono</string>
    <string name="contrase_a">Contraseña</string>
    <string name="repetir_contrase_a">Repetir Contraseña</string>
    <string name="precio">$5000</string>
    <string name="tp_producto">Camiseta</string>
    <string name="producto">"descripcion del producto "</string>
    <string name="categor_a">Categoría</string>
    <string name="electr_nica">Electrónica</string>
    <string name="ropa">Ropa</string>
    <string name="correo">Correo</string>
    <string name="tel_fono">Teléfono</string>
    <string name="nombre">Nombre</string>
    <string name="imagen_de_perfil">Imagen de perfil</string>
    <string name="mis_datos">Mis Datos</string>
    <string name="analisis">Análisis</string>
    <string name="historico">Historico</string>
    <string name="parcial">Parcial 2</string>
    <string name="edad">Edad</string>
    <string name="semestre">Semestre</string>
    <string name="programa_academico">Programa academico</string>
    <string name="calcular">Calcular</string>
    <string name="infoCalculadora">Calculadora de eventos</string>
    <string name="tipo_evento">Tipo de evento</string>
    <string name="invitados">Número de invitados</string>
    <string name="horas">Cantidad de horas</string>
    <string name="servicio">Tipo de servicio</string>
    <string name="infoServicio">Digite 1)básico 2)estándar 3)premium</string>
    <string name="costo">Costo por invitado</string>
    <string name="local">Costo local</string>
    <string name="varios">Otros costos(decoracion, servicio, etc...)</string>
    <string name="programa_acad_mico">Programa académico</string>
    <string name="costo_por_inivitado">costo por inivitado</string>
    <string name="total">total</string>
    <string name="costo_por_categoria">Costo por categoria</string>
    <string name="costos_adicionales">costos adicionales</string>
    <string name="tipo_de_evento">Tipo de evento</string>
    <string name="n_mero_de_invitados">Número de invitados</string>
    <string name="costo_unitario_por_invitado">Costo unitario por invitado</string>
    <string name="horas_de_duraci_n">Horas de duración</string>
    <string name="costo_de_servicio">Costo de servicio</string>
    <string name="costo_del_local">Costo del local</string>
    <string name="otros_costos">Otros costos</string>
    <string name="calcular_presupuesto">Calcular presupuesto</string>
    <string name="costo_por_invitado">Costo por invitado</string>
    <string name="costo_catering">Costo catering</string>


</resources>
