<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    android:fillViewport="true"> <!-- Esto asegura que el contenido rellene el área visible -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="16dp">

        <!-- 1. Logo de la App -->
        <EditText
            android:id="@+id/etTpEvento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tipo_de_evento" />

        <EditText
            android:id="@+id/etNumInvitados"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/n_mero_de_invitados"
            android:inputType="number" />

        <EditText
            android:id="@+id/etCostoUnitario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/costo_unitario_por_invitado"
            android:inputType="numberDecimal" />

        <EditText
            android:id="@+id/etHoras"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/horas_de_duraci_n"
            android:inputType="number" />

        <EditText
            android:id="@+id/etServicio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/costo_de_servicio"
            android:inputType="numberDecimal" />

        <EditText
            android:id="@+id/etCostoLocal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/costo_del_local"
            android:inputType="numberDecimal" />

        <EditText
            android:id="@+id/etCostoVarios"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/otros_costos"
            android:inputType="numberDecimal" />

        <!-- Botón -->
        <Button
            android:id="@+id/btnCalculo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/calcular_presupuesto" />

        <!-- Resultados -->
        <TextView
            android:id="@+id/viewCostoInvitado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/costo_por_invitado"
            android:visibility="gone" />

        <TextView
            android:id="@+id/viewCostoCategoria"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/costo_catering"
            android:visibility="gone" />

        <TextView
            android:id="@+id/viewCostoVarios"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/otros_costos"
            android:visibility="gone" />

        <TextView
            android:id="@+id/viewtotal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/total"
            android:visibility="gone"
            android:textStyle="bold" />

    </LinearLayout>
</ScrollView>
