<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="128dp"
            android:layout_marginBottom="16dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iconAppRegister"
                android:layout_width="117dp"
                android:layout_height="106dp"
                android:layout_marginEnd="16dp"
                android:src="@drawable/iconlogo" />

            <TextView
                android:id="@+id/nameAppRegister"
                android:layout_width="207dp"
                android:layout_height="61dp"
                android:fontFamily="@font/agbalumo"
                android:text="@string/app_name"
                android:textColor="@color/blue"
                android:textSize="34sp"
                android:textStyle="bold" />
        </LinearLayout>

        <TextView
            android:id="@+id/textRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/infoRegistro"
            android:textAlignment="center"
            android:textColor="@color/blue"
            android:textSize="16sp"
            android:textStyle="italic" />

        <EditText
            android:id="@+id/etNombres"
            style="@style/EditTextRounded"
            android:layout_width="match_parent"
            android:layout_height="47dp"
            android:layout_marginTop="10dp"
            android:hint="@string/nombres"
            android:paddingHorizontal="15dp"
            android:textColor="@color/orange" />

        <EditText
            android:id="@+id/etEdad"
            style="@style/EditTextRounded"
            android:layout_width="match_parent"
            android:layout_height="47dp"
            android:layout_marginTop="10dp"
            android:inputType="number"
            android:hint="@string/edad"
            android:textColor="@color/orange" />

        <EditText
            android:id="@+id/etCorreo"
            style="@style/EditTextRounded"
            android:layout_width="match_parent"
            android:layout_height="47dp"
            android:layout_marginTop="10dp"
            android:hint="@string/correo_electr_nico"
            android:inputType="textEmailAddress"
            android:textColor="@color/orange" />

        <EditText
            android:id="@+id/etSemestre"
            style="@style/EditTextRounded"
            android:layout_width="match_parent"
            android:layout_height="47dp"
            android:layout_marginTop="10dp"
            android:hint="@string/semestre"
            android:inputType="number"
            android:textColor="@color/orange" />

        <EditText
            android:id="@+id/etPrograma"
            style="@style/EditTextRounded"
            android:layout_width="match_parent"
            android:layout_height="47dp"
            android:layout_marginTop="16dp"
            android:hint="@string/programa_academico"
            android:paddingHorizontal="15dp"
            android:textColor="@color/orange" />

        <EditText
            android:id="@+id/etContrasena"
            style="@style/EditTextRounded"
            android:layout_width="match_parent"
            android:layout_height="47dp"
            android:layout_marginTop="10dp"
            android:hint="@string/contrase_a"
            android:inputType="textPassword"
            android:textColor="@color/orange" />

        <EditText
            android:id="@+id/etRepetirContrasena"
            style="@style/EditTextRounded"
            android:layout_width="match_parent"
            android:layout_height="47dp"
            android:layout_marginTop="10dp"
            android:hint="@string/repetir_contrase_a"
            android:inputType="textPassword"
            android:textColor="@color/orange" />

        <CheckBox
            android:id="@+id/checkTerminos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/conditions"
            android:textColor="@color/blue" />

        <Button
            android:id="@+id/btnRegistro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/orange"
            android:fontFamily="sans-serif-light"
            android:text="@string/login"
            android:textColor="@android:color/white"
            android:textSize="30sp" />

    </LinearLayout>
</ScrollView>
