<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="16dp">

        <!-- 1. Imagen Representativa de Perfil -->
        <ImageView
            android:id="@+id/perfilImagen"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginBottom="16dp"
            android:contentDescription="@string/imagen_de_perfil"
            android:rotation="-90"
            android:src="@drawable/iconuser" />

        <!-- 2. Visualización de nombres -->
        <!-- Nombre -->
        <TextView
            android:id="@+id/perfilNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <!-- EditText para editar nombre -->
        <EditText
            android:id="@+id/editPerfilNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nombre"
            android:visibility="gone" />

        <!-- Apellidos -->
        <TextView
            android:id="@+id/perfilApellidos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <!-- EditText para editar apellidos -->
        <EditText
            android:id="@+id/editPerfilApellidos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/apellidos"
            android:visibility="gone" />

        <!-- Correo -->
        <TextView
            android:id="@+id/perfilCorreo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <!-- EditText para editar correo -->
        <EditText
            android:id="@+id/editPerfilCorreo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/correo"
            android:inputType="textEmailAddress"
            android:visibility="gone" />

        <!-- Teléfono -->
        <TextView
            android:id="@+id/perfilTelefono"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <!-- EditText para editar teléfono -->
        <EditText
            android:id="@+id/editPerfilTelefono"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tel_fono"
            android:inputType="phone"
            android:visibility="gone" />

        <!-- 6. Botón de Editar -->
        <Button
            android:id="@+id/perfilBtnEditar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:backgroundTint="@color/orange"
            android:fontFamily="sans-serif-light"
            android:text="@string/editar"
            android:textColor="@android:color/white"
            android:textSize="30sp" />

    </LinearLayout>
</ScrollView>