<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray">

    <ImageView
        android:id="@+id/logoAppHome"
        android:layout_width="196dp"
        android:layout_height="173dp"
        android:layout_marginTop="28dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/iconlogo" />

    <TextView
        android:id="@+id/nameAppHome"
        android:layout_width="288dp"
        android:layout_height="75dp"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/agbalumo"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="@color/blue"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoAppHome" />

    <TextView
        android:id="@+id/infoHome"
        android:layout_width="325dp"
        android:layout_height="89dp"
        android:layout_marginTop="48dp"
        android:text="@string/info"
        android:textAlignment="center"
        android:textColor="@color/blue"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameAppHome" />

    <Button
        android:id="@+id/btLogin"
        android:layout_width="241dp"
        android:layout_height="59dp"
        android:backgroundTint="@color/orange"
        android:fontFamily="sans-serif-light"
        android:text="@string/start"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.842" />

    <Button
        android:id="@+id/btRegistrar"
        android:layout_width="148dp"
        android:layout_height="48dp"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/gray"
        android:fontFamily="sans-serif"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textColor="@color/blue"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btLogin"
        app:layout_constraintVertical_bias="0.0" />


</androidx.constraintlayout.widget.ConstraintLayout>
