<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        android:gravity="center_horizontal"
        android:background="@color/gray">

        <!-- Logo y Nombre de la App -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="128dp"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginBottom="16dp">

            <ImageView
                android:id="@+id/iconAppLogin"
                android:layout_width="117dp"
                android:layout_height="106dp"
                android:layout_marginEnd="16dp"
                android:src="@drawable/iconlogo" />

            <TextView
                android:id="@+id/nameAppLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/agbalumo"
                android:text="@string/app_name"
                android:textColor="@color/blue"
                android:textSize="34sp"
                android:textStyle="bold" />
        </LinearLayout>

        <!-- Mensaje de Información -->
        <TextView
            android:id="@+id/infoLogin"
            android:layout_width="308dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:gravity="center"
            android:text="@string/infoLogin"
            android:textColor="@color/blue"
            android:textSize="18sp"
            android:textStyle="italic" />

        <!-- Usuario -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginBottom="12dp">

            <ImageView
                android:id="@+id/imgUser"
                android:layout_width="42dp"
                android:layout_height="38dp"
                android:layout_marginEnd="10dp"
                android:rotation="-90"
                android:src="@drawable/iconuser" />

            <EditText
                android:id="@+id/textUserLogin"
                style="@style/EditTextRounded"
                android:layout_width="0dp"
                android:layout_height="47dp"
                android:layout_weight="1"
                android:hint="Usuario"
                android:textColor="@color/orange"
                android:inputType="text"/>
        </LinearLayout>

        <!-- Contraseña -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginBottom="20dp">

            <ImageView
                android:id="@+id/imgPass"
                android:layout_width="42dp"
                android:layout_height="38dp"
                android:layout_marginEnd="10dp"
                android:src="@drawable/iconpass"/>

            <EditText
                android:id="@+id/textPassLogin"
                style="@style/EditTextRounded"
                android:layout_width="0dp"
                android:layout_height="47dp"
                android:layout_weight="1"
                android:hint="Contraseña"
                android:textColor="@color/orange"
                android:inputType="textPassword"/>
        </LinearLayout>

        <!-- Botón de Login -->
        <Button
            android:id="@+id/btEntrar"
            android:layout_width="290dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:backgroundTint="@color/orange"
            android:fontFamily="sans-serif-light"
            android:text="@string/intro"
            android:textColor="@color/white"
            android:textSize="30sp" />

        <!-- Botón de Recuperación -->
        <Button
            android:id="@+id/btRecuperar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:backgroundTint="@color/gray"
            android:fontFamily="sans-serif-light"
            android:text="@string/help"
            android:textAllCaps="false"
            android:textColor="@color/blue"
            android:textSize="20sp"
            android:textStyle="bold" />

        <!-- Login con Google -->
        <LinearLayout
            style="@style/ButtonGoogle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="4dp"
            android:layout_marginBottom="20dp">

            <ImageView
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_marginEnd="8dp"
                android:src="@drawable/icongoogle" />

            <Button
                android:id="@+id/btGoogleLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:fontFamily="monospace"
                android:text="@string/googleLogin"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="20sp" />
        </LinearLayout>

        <!-- Crear cuenta -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginBottom="20dp">

            <TextView
                android:id="@+id/creaCuenta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ask"
                android:textColor="@color/blue"
                android:textSize="18sp"/>

            <Button
                android:id="@+id/btRegistroLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:text="@string/login"
                android:textColor="@color/orange"
                android:textSize="18sp" />
        </LinearLayout>

    </LinearLayout>

</ScrollView>
