<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="128dp"
            android:layout_marginBottom="16dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/recuperarIconoApp"
                android:layout_width="117dp"
                android:layout_height="106dp"
                android:layout_marginEnd="34dp"
                android:src="@drawable/iconlogo" />

            <TextView
                android:id="@+id/recuperarNombreApp"
                android:layout_width="216dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/agbalumo"
                android:text="@string/app_name"
                android:textColor="@color/blue"
                android:textSize="34sp"
                android:textStyle="bold" />
        </LinearLayout>

        <!-- 2. Mensaje Instructivo -->
        <TextView
            android:id="@+id/recuperarMensaje"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/infoRecupera"
            android:textAlignment="center"
            android:textColor="@color/blue"
            android:textSize="16sp"
            android:textStyle="italic" />

        <!-- 3. Solicitud de Correo Electrónico -->
        <EditText
            android:id="@+id/recuperarCorreo"
            style="@style/EditTextRounded"
            android:layout_width="match_parent"
            android:layout_height="47dp"
            android:layout_marginBottom="16dp"
            android:hint="Correo Electrónico"
            android:inputType="textEmailAddress"
            android:textColor="@color/orange" />

        <Button
            android:id="@+id/recuperarBtnEnviar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/orange"
            android:fontFamily="sans-serif-light"
            android:text="@string/sendMail"
            android:textColor="@android:color/white"
            android:textSize="30sp" />

    </LinearLayout>
</ScrollView>

