<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    tools:context=".fragments.CategoriasFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        android:gravity="center_horizontal">

        <TextView
            android:id="@+id/textViewTituloCategorias"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Categorías"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="24sp"
            android:paddingBottom="16dp"/>

        <!-- Categoría 1 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@color/white"
            android:padding="12dp"
            android:layout_marginBottom="12dp">

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/baseline_category_24"
                android:contentDescription="@string/categor_a"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="16dp"
                android:gravity="center_vertical"
                android:text="@string/ropa"
                android:textSize="18sp"
                android:textColor="@color/black"/>
        </LinearLayout>

        <!-- Categoría 2 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@color/white"
            android:padding="12dp"
            android:layout_marginBottom="12dp">

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/baseline_category_24"
                android:contentDescription="@string/categor_a"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="16dp"
                android:gravity="center_vertical"
                android:text="@string/electr_nica"
                android:textSize="18sp"
                android:textColor="@color/black"/>
        </LinearLayout>

        <!-- Puedes duplicar este bloque para más categorías -->

    </LinearLayout>
</ScrollView>
